---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 29/4/25
  Bugfixes:
    - Fixed that currently existing hex cores were not sometimes getting new trades upon ranking up items to bronze rank.
  Features:
    - Added more loaders per hex core.
    - Added ability to configure unloader filters directly for each hex core.
    - Added sink mode for hex cores.
    - Added generator mode for hex cores.
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 29/4/25
  Bugfixes:
    - Fixed crash when clicking on a hex core with crude oil.
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 28/4/25
  Features:
    - Mousing over the arrow in a trade shows helpful info.
  Major Features:
    - Added trade productivity.
  Minor Features:
    - Added and improved some commands.
  Changes:
    - Changed biter egg value.
    - Changed bronze rank bonus effect to affect trade productivity.
    - Changed starter trades.
  Gui:
    - Cleaned up the catalog.
    - Made catalog texts more concise.
  Bugfixes:
    - Fixed rounding of item stack value calculation.
    - Fixed display of total bought and sold items at a hex core.
    - Fixed rare crash when claiming hexes too quickly.
    - Fixed coin normalization so that huge coin values can still be affected by small coin values.