@@ -50,6 +50,9 @@ hextorio-rank-2-effect=Bronze Rank Effect
 hextorio-rank-3-effect=Silver Rank Effect
 hextorio-rank-4-effect=Gold Rank Effect
 hextorio-rank-5-effect=Red Rank Effect
+hextorio-supercharge-cost-per-tile=S.C. Cost Per Tile
+hextorio-supercharge-cost-per-well=S.C. Cost Per Well
+hextorio-supercharge-cost-multiplier=S.C. Cost Multiplier
 
 [mod-setting-description]
 hextorio-hex-size=The average diameter of the hexagons.
@@ -82,6 +85,9 @@ hextorio-rank-2-effect=The percentage that the bronze item rank bonus uses (show
 hextorio-rank-3-effect=(WIP)
 hextorio-rank-4-effect=(WIP)
 hextorio-rank-5-effect=(WIP)
+hextorio-supercharge-cost-per-tile=Cost per resource tile to supercharge all resources in a hex, making them infinite.
+hextorio-supercharge-cost-per-well=Cost per resource well to supercharge all resources in a hex, making them infinite.
+hextorio-supercharge-cost-multiplier=Overall multiplier of cost to supercharge resources.
 
 [string-mod-setting]
 hextorio-grid-rotation-mode-random=Random
@@ -114,8 +120,11 @@ sink-mode-tooltip-header=Sink Mode
 sink-mode-tooltip-body=Irreversibly convert these trades to low-efficiency "sell" trades for each input item, producing coins.
 generator-mode-tooltip-header=Generator Mode
 generator-mode-tooltip-body=Irreversibly convert these trades to low-efficiency "buy" trades for each output item, consuming coins.
-delete-core-tooltip=Delete this hex core for __1__
+delete-core-tooltip-header=Deletion
+delete-core-tooltip-body=Delete this hex core.
 delete-core-confirmation=DELETE HEX CORE?
+supercharge-tooltip-header=Supercharge
+supercharge-tooltip-body=Make the remaining resources of this hex infinite.
 
 [hextorio-gui]
 item-value=Item Value
@@ -148,6 +157,7 @@ processing-finished=Processing finished.
 total-input-value=Total Input Value: __1__
 total-output-value=Total Output Value: __1__
 productivity-bonus=Productivity
+cost=Cost: __1__
 
 
 
